--- a/MasterAngler/MasterAngler.csproj
+++ b/MasterAngler/MasterAngler.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Extensions\FocusExtension.cs" />
     <Compile Include="FiniteStateMachine\Engine.cs" />
     <Compile Include="FiniteStateMachine\State.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="ViewModel\ConsoleViewModel.cs" />
     <Compile Include="ViewModel\ControlViewModel.cs" />
     <Compile Include="ViewModel\DataViewModel.cs" />
@@ -205,7 +206,7 @@
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
