Added another settings file and the mouse movement is now interpolated.

--- a/MasterAngler/App.config
+++ b/MasterAngler/App.config
@@ -2,6 +2,8 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MasterAngler.KeyBindings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="MasterAngler.Properties.KeyBindings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="MasterAngler.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,15 +11,22 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
     <userSettings>
-        <MasterAngler.Properties.Settings>
+        <MasterAngler.KeyBindings>
+            <setting name="Hello" serializeAs="String">
+                <value />
+            </setting>
+        </MasterAngler.KeyBindings>
+        <MasterAngler.Properties.KeyBindings>
             <setting name="Interact" serializeAs="String">
                 <value>None</value>
             </setting>
             <setting name="CastFishing" serializeAs="String">
                 <value>None</value>
             </setting>
-            <setting name="HELLO" serializeAs="String">
-                <value />
+        </MasterAngler.Properties.KeyBindings>
+        <MasterAngler.Properties.Settings>
+            <setting name="BackgroundMode" serializeAs="String">
+                <value>False</value>
             </setting>
         </MasterAngler.Properties.Settings>
     </userSettings>
