--- a/MasterAngler/Properties/Settings.settings
+++ b/MasterAngler/Properties/Settings.settings
@@ -2,14 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="MasterAngler.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="Interact" Type="System.Windows.Forms.Keys" Scope="User">
-      <Value Profile="(Default)">None</Value>
-    </Setting>
-    <Setting Name="CastFishing" Type="System.Windows.Forms.Keys" Scope="User">
-      <Value Profile="(Default)">None</Value>
-    </Setting>
-    <Setting Name="HELLO" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+    <Setting Name="BackgroundMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
