Added mouse teleport setting and a check to see it target is outside the screen borders.

--- a/MasterAngler/App.config
+++ b/MasterAngler/App.config
@@ -28,6 +28,9 @@
             <setting name="BackgroundMode" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="MouseTeleport" serializeAs="String">
+                <value>False</value>
+            </setting>
         </MasterAngler.Properties.Settings>
     </userSettings>
 </configuration>
