--- a/MasterAngler/Properties/Settings.settings
+++ b/MasterAngler/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="BackgroundMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="MouseTeleport" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
