--- a/MechaFish/packages.config
+++ b/MechaFish/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="MahApps.Metro" version="1.3.0" targetFramework="net451" />
+  <package id="MahApps.Metro.IconPacks" version="1.6.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net451" />
   <package id="NHotkey" version="1.2.1" targetFramework="net451" />
   <package id="NHotkey.Wpf" version="1.2.1" targetFramework="net451" />
