Saving user hotkeys as System.Windows.Forms.Keys instead of int.

--- a/MechaFish/App.config
+++ b/MechaFish/App.config
@@ -12,13 +12,13 @@
     <userSettings>
         <MechaFish.Properties.HotKeys>
             <setting name="Interact" serializeAs="String">
-                <value>0</value>
+                <value>None</value>
             </setting>
             <setting name="CastFishing" serializeAs="String">
-                <value>0</value>
+                <value>None</value>
             </setting>
             <setting name="Pause" serializeAs="String">
-                <value>0</value>
+                <value>None</value>
             </setting>
         </MechaFish.Properties.HotKeys>
         <MetroMvvm.Properties.Settings>
