Code cleanup, moved some files and renamed some variables.

--- a/MechaFish/App.config
+++ b/MechaFish/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MechaFish.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="MechaFish.Properties.HotKeys" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="MetroMvvm.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
@@ -10,6 +11,17 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
     <userSettings>
+        <MechaFish.Properties.Settings>
+            <setting name="MouseTeleport" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="BackgroundMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="StopOnBagsFull" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </MechaFish.Properties.Settings>
         <MechaFish.Properties.HotKeys>
             <setting name="Interact" serializeAs="String">
                 <value>None</value>
