--- a/MechaFish/packages.config
+++ b/MechaFish/packages.config
@@ -6,4 +6,5 @@
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net451" />
   <package id="NHotkey" version="1.2.1" targetFramework="net451" />
   <package id="NHotkey.Wpf" version="1.2.1" targetFramework="net451" />
+  <package id="QuickConverter" version="1.2.3.0" targetFramework="net451" />
 </packages>
